# cursor-account-switcher

./: .eslintrc.json  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
scripts/: add-icon-padding.py  build.bat  build.sh  dev.bat  dev.sh  release.js  release.sh  sync-version.js  test-ci.sh  test.bat  test.sh
src/: App.tsx  styles.css  version.ts
src-tauri/: Cargo.toml  TEST_RESULTS.md  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  csv_manager.rs  database.rs  detailed_usage_client.rs  logger.rs  machine_id.rs  main.rs  path_detector.rs  process_utils.rs  reset_machine.rs  token_auth.rs  types.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/: App.test.tsx
src/pages/: AccountPage.tsx  DetailedUsagePage.tsx  HomePage.tsx  LogPage.tsx  SettingsPage.tsx
src/pages/__tests__/: AccountPage.test.tsx  HomePage.test.tsx  SettingsPage.test.tsx
src/test/: setup.ts  utils.tsx
src/types/: index.ts
src/types/__tests__/: index.test.ts
src/utils/: notifications.ts
