[package]
name = "cursor-switcher"
version = "1.1.9"
description = "Cursor Account Switcher Tool"
authors = ["Cursor Account Switcher Team"]
license = "GPL-3.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "fs-read-dir", "process-relaunch", "dialog-save", "fs-exists", "dialog-ask", "fs-create-dir", "fs-copy-file", "fs-read-file", "fs-remove-file", "dialog-message", "fs-write-file", "dialog-confirm", "process-exit", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

